<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="navigation">Navigation</string>
    <string name="weather">Weather</string>
    <string name="astronomy">Astronomy</string>
    <string name="tools">Tools</string>
    <string name="flashlight_title">Flashlight</string>
    <string name="photo_maps">Photo maps</string>
    <string name="clinometer_title">Clinometer</string>
    <string name="general">General</string>
    <string name="pref_theme_title">Theme</string>
    <string name="sensors">Sensors</string>
    <string name="pref_compass_sensor_title">Compass</string>
    <string name="override_from_gps">Set override from GPS</string>
    <string name="pref_altimeter_calibration_title">Altimeter</string>
    <string name="elevation_from_pressure">Set override from barometer</string>
    <string name="pref_elevation_override_title">Elevation override</string>
    <string name="pref_elevation_override_sea_level_dialog_msg">Enter the current pressure at sea level in hPa</string>
    <string name="pref_elevation_override_sea_level_dialog_title">Enter sea level pressure</string>
    <string name="pref_elevation_override_sea_level_title">Using a known sea level pressure</string>
    <string name="pref_display_multi_beacons_title">Show nearby beacons</string>
    <string name="pref_show_linear_compass_title">Show linear compass</string>
    <string name="pref_show_linear_compass_summary">When the phone is vertical</string>
    <string name="pref_num_visible_beacons_title">Nearby beacons</string>
    <string name="pref_display_multi_beacons_summary">Show closest beacons on the compass</string>
    <string name="pref_nearby_linear_only_title">Only show nearby beacons on linear compass</string>
    <string name="pref_show_calibrate_on_navigate_dialog_title">Calibrate before navigating</string>
    <string name="pref_max_beacon_distance_title">Nearby beacon distance</string>
    <string name="pref_show_sun_moon_compass_title">Show sun/moon on compass</string>
    <string name="pref_open_source_licenses_title">Licenses</string>
    <string name="pref_category_about">About</string>
    <string name="pref_app_version_title">Version</string>
    <string name="pref_github_title">GitHub</string>
    <string name="pref_email_title">Email developer</string>
    <string name="pref_theme" translatable="false">pref_theme</string>
    <string name="pref_display_multi_beacons" translatable="false">pref_display_multi_beacons</string>
    <string name="pref_nearby_linear_only" translatable="false">pref_nearby_linear_only</string>
    <string name="pref_show_sun_moon_compass" translatable="false">pref_show_sun_moon_compass_2</string>
    <string name="pref_show_linear_compass" translatable="false">pref_show_linear_compass</string>
    <string name="pref_num_visible_beacons" translatable="false">pref_num_visible_beacons</string>
    <string name="pref_holder_altitude" translatable="false">pref_holder_altitude</string>
    <string name="pref_altitude_override" translatable="false">pref_altitude_override</string>
    <string name="pref_altitude_from_gps_btn" translatable="false">pref_altitude_from_gps_btn</string>
    <string name="pref_altitude_override_sea_level" translatable="false">pref_altitude_override_sea_level</string>
    <string name="pref_open_source_licenses" translatable="false">pref_open_source_licenses</string>
    <string name="pref_app_version" translatable="false">pref_app_version</string>
    <string name="pref_show_calibrate_on_navigate_dialog" translatable="false">pref_show_calibrate_on_navigate_dialog</string>
    <string name="pref_github" translatable="false">pref_github</string>
    <string name="pref_email" translatable="false">pref_email</string>
    <string name="pref_altimeter_calibration_mode" translatable="false">pref_altimeter_calibration_mode</string>
    <string name="email" translatable="false">trailsense@protonmail.com</string>
    <string name="pref_privacy_policy_title">Privacy policy</string>
    <string name="pref_privacy_policy" translatable="false">pref_privacy_policy</string>
    <string name="privacy_policy_url" translatable="false">https://kylecorry.com/Trail-Sense/privacy_policy.html</string>
    <string name="power">Power</string>
    <string name="tool_notes_title">Notes</string>
    <string name="backtrack">Backtrack</string>
    <string name="pref_backtrack_enabled" translatable="false">pref_backtrack_enabled</string>
    <string name="pref_backtrack_enabled_summary">Record location history</string>
    <string name="pref_backtrack_frequency_title">Backtrack interval</string>
    <string name="pref_backtrack_save_cell" translatable="false">pref_backtrack_save_cell</string>
    <string name="pref_backtrack_save_cell_summary">Records cell signal at the waypoint. Does not use the Internet.</string>
    <string name="pref_backtrack_save_cell_title">Record cell signal</string>
    <string name="pref_navigation_quick_action_left" translatable="false">pref_navigation_quick_action_left</string>
    <string name="pref_navigation_quick_action_right" translatable="false">pref_navigation_quick_action_right</string>
    <string name="left_quick_action">Left quick action</string>
    <string name="right_quick_action">Right quick action</string>
    <string name="experimental">Experimental</string>
    <string name="tides">Tides</string>
    <string name="pref_navigation_speedometer_type" translatable="false">pref_navigation_speedometer_type</string>
    <string name="speedometer">Speedometer</string>
    <string name="pedometer">Pedometer</string>
    <string name="pref_nearby_radius_holder" translatable="false">pref_nearby_radius_holder</string>
    <string name="pref_backtrack_interval" translatable="false">pref_backtrack_interval</string>
    <string name="pref_backtrack_path_color" translatable="false">pref_backtrack_path_color</string>
    <string name="pref_backtrack_path_style" translatable="false">pref_backtrack_path_dotted</string>
    <string name="pref_default_path_style_title">Default path style</string>
    <string name="pref_default_path_color_title">Default path color</string>
    <string name="pref_show_last_signal_beacon" translatable="false">pref_show_last_signal_beacon</string>
    <string name="pref_show_last_signal_beacon_title">Last signal beacon</string>
    <string name="pref_show_last_signal_beacon_summary">Creates a beacon for the last cell signal location</string>
    <string name="pref_navigation_lock_screen_presence" translatable="false">pref_navigation_show_on_lock_screen</string>
    <string name="pref_navigation_lock_screen_presence_title">Show on lock screen while navigating</string>
    <string name="pref_navigation_lock_screen_when_open_title">Show on lock screen while open</string>
    <string name="pref_backtrack_history_days" translatable="false">pref_backtrack_history_days</string>
    <string name="pref_backtrack_history_days_title">Backtrack history</string>
    <string name="units">Units</string>
    <string name="privacy">Privacy</string>
    <string name="pref_privacy_settings" translatable="false">pref_privacy_settings</string>
    <string name="pref_unit_settings" translatable="false">pref_unit_settings</string>
    <string name="pref_experimental_settings" translatable="false">pref_experimental_settings</string>
    <string name="pref_sensor_settings" translatable="false">pref_sensor_settings</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="pref_diagnostics" translatable="false">pref_diagnostics</string>
    <string name="paths">Paths</string>
    <string name="elevation">Elevation</string>
    <string name="pref_auto_simplify_paths" translatable="false">pref_auto_simplify_paths</string>
    <string name="pref_auto_simplify_paths_title">Simplify paths on import</string>
    <string name="errors">Errors</string>
    <string name="pref_error_settings" translatable="false">pref_error_settings</string>
    <string name="pref_only_navigate_path_points" translatable="false">pref_only_navigate_path_points</string>
    <string name="pref_only_navigate_path_points_title">Only navigate to recorded points</string>
    <string name="pref_altimeter_accuracy_holder" translatable="false">pref_altimeter_accuracy_holder</string>
    <string name="samples">Samples</string>
    <string name="sensor_summary">Compass, GPS, altimeter, barometer, etc.</string>
    <string name="source">Source</string>
    <string name="pref_backtrack_notifications_link" translatable="false">pref_backtrack_notifications_link</string>
    <string name="notifications_channel">Notifications (%s)</string>
    <string name="reset_calibration">Reset calibration</string>
    <string name="backup_restore">Backup / restore</string>
    <string name="augmented_reality">Augmented Reality</string>
    <string name="pref_tool_quick_action_header_key" translatable="false">pref_tool_quick_action_header_key</string>
    <string name="pref_altimeter_clear_cache_holder" translatable="false">pref_altimeter_clear_cache_holder</string>
    <string name="continuous_calibration">Continuous calibration</string>
    <string name="continuous_calibration_description">Calibrates whenever there is a GPS fix</string>
    <string name="pref_altimeter_continuous_calibration" translatable="false">pref_altimeter_continuous_calibration</string>
    <string name="fused_altimeter_force_calibration">Force calibration interval</string>
    <string name="pref_fused_altimeter_force_calibration_holder" translatable="false">pref_fused_altimeter_force_calibration_holder</string>
    <string name="pref_use_dynamic_colors" translatable="false">pref_use_dynamic_colors</string>
    <string name="dynamic_colors">Dynamic colors</string>
    <string name="pref_use_dynamic_colors_on_compass" translatable="false">pref_use_dynamic_colors_on_compass</string>
    <string name="compass_dynamic_colors">Compass dynamic colors</string>
    <string name="compass_dynamic_colors_summary">Use dynamic colors for cardinal directions</string>
    <string name="pref_fast_path_rendering" translatable="false">pref_fast_path_rendering</string>
    <string name="fast_path_rendering">Fast path rendering</string>
    <string name="fast_path_rendering_summary">Improves performance at the cost of appearance</string>
    <string name="pref_show_dial_ticks_when_no_compass" translatable="false">pref_show_dial_ticks_when_no_compass</string>
    <string name="show_dial_ticks_on_nearby_radar">Show dial ticks</string>
    <string name="show_dial_ticks_on_nearby_radar_summary">Your device does not have a compass, but you can still see what direction beacons are.</string>
    <string name="layers">Layers</string>
    <string name="record_sighting">Record sighting</string>
    <string name="harvested">Harvested</string>
    <string name="pref_navigation_keep_unlocked" translatable="false">pref_navigation_keep_unlocked</string>
    <string name="pref_high_detail_mode_title">High detail mode</string>
    <string name="pref_high_detail_mode_summary">Loads more tiles for higher quality. Uses more memory.</string>
    <string name="pref_navigation_high_detail_mode" translatable="false">pref_navigation_high_detail_mode</string>
    <string name="plugin_digital_elevation_model">Digital elevation model (DEM)</string>
    <string name="remove_dem">Remove DEM</string>
    <string name="pref_load_dem_button" translatable="false">pref_load_dem_button</string>
    <string name="pref_clear_dem_button" translatable="false">pref_clear_dem_button</string>
    <string name="map">Map</string>
    <string name="pref_map_layer_button" translatable="false">pref_map_layer_button</string>
    <string name="pref_lock_bearing_to_location" translatable="false">pref_lock_bearing_to_location</string>
    <string name="lock_bearing_to_location">Lock bearing to location</string>
    <string name="lock_bearing_to_location_description">Lock the bearing line to your starting location</string>
</resources>