<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:title="@string/general">

        <Preference
            app:icon="@drawable/ruler"
            app:key="@string/pref_unit_settings"
            app:title="@string/units" />
        <Preference
            android:summary="@string/sensor_summary"
            app:icon="@drawable/ic_sensors"
            app:key="@string/pref_sensor_settings"
            app:title="@string/sensors" />
        <Preference
            app:icon="@drawable/ic_tool_battery"
            app:key="@string/pref_power_settings"
            app:title="@string/power" />
        <Preference
            app:icon="@drawable/ic_visible"
            app:key="@string/pref_privacy_settings"
            app:title="@string/privacy" />
        <Preference
            app:icon="@drawable/ic_alert"
            app:key="@string/pref_error_settings"
            app:title="@string/errors" />
        <Preference
            app:icon="@drawable/ic_experimental"
            app:key="@string/pref_experimental_settings"
            app:title="@string/experimental" />
        <Preference
            android:key="backup_restore"
            android:title="@string/backup_restore"
            app:icon="@drawable/backup_restore" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:title="@string/tools">

        <Preference
            app:icon="@drawable/apps"
            app:key="@string/pref_tool_quick_action_header_key"
            app:singleLineTitle="false"
            app:title="@string/tool_quick_actions" />

        <Preference
            app:icon="@drawable/ic_compass_icon"
            app:key="@string/pref_navigation_header_key"
            app:singleLineTitle="false"
            app:title="@string/navigation" />

        <Preference
            app:icon="@drawable/ic_tool_backtrack"
            app:key="@string/pref_paths_header_key"
            app:singleLineTitle="false"
            app:title="@string/paths" />

        <Preference
            app:icon="@drawable/maps"
            app:key="@string/pref_maps_header_key"
            app:singleLineTitle="false"
            app:title="@string/photo_maps" />

        <Preference
            app:icon="@drawable/cloud"
            app:key="@string/pref_weather_category"
            app:singleLineTitle="false"
            app:title="@string/weather" />

        <Preference
            app:icon="@drawable/ic_astronomy"
            app:key="@string/pref_astronomy_category"
            app:singleLineTitle="false"
            app:title="@string/astronomy" />

        <Preference
            app:icon="@drawable/flashlight"
            app:key="@string/pref_flashlight_settings"
            app:singleLineTitle="false"
            app:title="@string/flashlight_title" />

        <Preference
            app:icon="@drawable/clinometer"
            app:key="@string/pref_clinometer_settings"
            app:singleLineTitle="false"
            app:title="@string/clinometer_title" />

        <Preference
            android:key="@string/pref_odometer_calibration"
            android:title="@string/pedometer"
            app:icon="@drawable/steps"
            app:singleLineTitle="false" />

        <Preference
            app:icon="@drawable/ic_tide_table"
            app:key="@string/pref_tide_settings"
            app:singleLineTitle="false"
            app:title="@string/tides" />

        <Preference
            app:icon="@drawable/ic_camera"
            app:key="@string/pref_augmented_reality_settings"
            app:singleLineTitle="false"
            app:title="@string/augmented_reality" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:title="@string/pref_theme_title">
        <ListPreference
            app:defaultValue="system"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:icon="@drawable/ic_theme"
            app:key="@string/pref_theme"
            app:singleLineTitle="false"
            app:title="@string/pref_theme_title"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/palette"
            app:key="@string/pref_use_dynamic_colors"
            app:singleLineTitle="false"
            app:title="@string/dynamic_colors" />
        <SwitchPreferenceCompat
            android:summary="@string/compass_dynamic_colors_summary"
            app:defaultValue="false"
            app:icon="@drawable/ic_compass_icon"
            app:key="@string/pref_use_dynamic_colors_on_compass"
            app:singleLineTitle="false"
            app:title="@string/compass_dynamic_colors" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_about"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false">

        <Preference
            android:key="@string/pref_diagnostics"
            android:title="@string/diagnostics"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <Preference
            android:key="@string/pref_app_version"
            android:title="@string/pref_app_version_title"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <Preference
            android:summary="@string/privacy_policy_url"
            android:title="@string/pref_privacy_policy_title"
            app:iconSpaceReserved="false"
            app:key="@string/pref_privacy_policy"
            app:singleLineTitle="false" />

        <Preference
            android:summary="@string/email"
            android:title="@string/pref_email_title"
            app:iconSpaceReserved="false"
            app:key="@string/pref_email"
            app:singleLineTitle="false" />

        <Preference
            android:summary="https://github.com/kylecorry31/Trail-Sense"
            android:title="@string/pref_github_title"
            app:iconSpaceReserved="false"
            app:key="@string/pref_github"
            app:singleLineTitle="false" />

        <Preference
            android:key="@string/pref_open_source_licenses"
            android:title="@string/pref_open_source_licenses_title"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

    </PreferenceCategory>

</PreferenceScreen>
